--- a/bdvvxk.html
+++ b/bdvvxk.html
@@ -24,7 +24,7 @@
                         </p>
                         <p><strong>导言：</strong></p>
                         <p>
-                            <strong>欢迎您使用<span class=app_name>星空视频</span>！</strong>
+                            <strong>欢迎您使用<span class=app_name>星空视频APP</span>！</strong>
                         </p>
                         <p>
                             本软件非常重视个人信息的保护，您在使用<span class=app_name>星空视频</span>平台及相关服务（下称“本平台/本服务/本应用”）前，请您务必仔细阅读并透彻理解《<span class=app_name>星空视频</span>隐私政策》（下称“本隐私政策”），<strong>特别是以粗体/粗体下划线标识的条款，您应重点阅读，在确认充分理解并同意后再开始使用。</strong>公司可能会收集和使用您的相关信息，您一旦选择使用本平台及服务，即意味着同意公司按照本隐私政策收集、保存、使用、共享、披露及保护您的信息。<strong>除另有约定外，本政策所用术语与《用户协议》中的术语具有相同的涵义。</strong>
