--- a/bdvvxk.html
+++ b/bdvvxk.html
@@ -394,7 +394,7 @@
                             <strong>我国《合同法》第39条规定：采用格式条款订立合同的，提供格式条款的一方应当遵循公平原则确定当事人之间的权利和义务，并采取合理的方式提请对方注意免除或者限制其责任的条款，按照对方的要求，对该条款予以说明。</strong>
                         </p>
                         <p><strong>联系我们</strong></p>
-                        <div class=cont_p><p class=email_p>邮箱：15776888165@126.com<p class=email_p><p class=email_p>联系人：张先生<p class=email_p>手机：15776888165<p class=email_p>地址：海南省海口市美兰区蓝天路12-1号国机中洋公馆1号楼1-A1603房</p></div>
+                        <div class=cont_p><p class=email_p>邮箱：15776888165@126.com<p class=email_p>联系人：张先生<p class=email_p>手机：15776888165<p class=email_p>地址：海南省海口市美兰区蓝天路12-1号国机中洋公馆1号楼1-A1603房</p></div>
                 </dl>
             </section>
         </section>
