--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -186,10 +186,13 @@
                         <p><strong>安卓版本涉及嵌入第三方代码、SDK传入个人信息的情形列举如下：</strong></p>
                         <p><strong>穿山甲广告SDK</strong></p>
                         <p>使用目的：广告投放</p>
+                        <p>收集的方式：自动收集</p>
+                        <p>收集的个人信息类型：唯一设备识别码</p>
                         <p>数据类型：硬件型号、操作系统版本号、国际移动设备识别码（IMEI）、网络设备硬件地址（MAC）、后台获取MAC信息、IP 地址、软件版本号、设备位置信息、网络接入方式及类型、操作日志等信息</p>
                         <p>官网链接：https://www.pangle.cn/privacy</p>
                         <p><strong>优量汇广告SDK</strong></p>
                         <p>使用目的：广告投放</p>
+                        <p>收集的方式：自动收集</p>
                         <p>数据类型：设备唯一标识码、设备MAC地址、后台获取MAC信息、软件列表、个人位置信息</p>
                         <p>官网链接：https://adnet.qq.com/privacy</p>
                         <p><strong>快手联盟SDK</strong></p>
