--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -215,6 +215,17 @@
                         <p>使用目的：一键登录</p>
                         <p>数据类型：设备标识信息、电话号码</p>
                         <p>官网链接：https://www.aliyun.com/</p>
+                        <p>权限申请及应用场景、范围</p>
+                        <p>我们对于软件需要在用户使用的设备上获取的权限非常严格和克制，在使用本应用过程中，我们会向您申请使用该功能所必须的权限，如您不同意开启该权限，请点击“不允许”，拒绝该权限的申请仅将影响您对特定产品功能的使用。我们在此向您列举产品将可能申请的权限及其使用目的；</p>
+                        <p>网络连接：在获取服务器后台接口数据、上传数据到后台服务器时需要访问网络，过程中可能会产生GPRS流量；</p>
+                        <p>电话权限：读取手机状态，获取用户的设备ID/DEVICE_ID，涉及到用户设置的IMEI信息，用于保障您的账号、网络、运营及系统安全，预防钓鱼网站欺诈木马病毒，以及进行数据统计(安装、活跃度等)；</p>
+                        <p>存储权限：读取、写入手机内部、外部，存储将应用的图片及其他文件缓存/存储到手机上，以及读取已存储的图片及其他文件；</p>
+                        <p>地理位置权限：接收卫星定位信息，用于广告SDK广告展示，根据位置匹配相应的广告；</p>
+                        <p>摄像头权限/拍照权限/相机权限：包含拍照功能、视频日记功能、尺子、量角器功能的应用会使用摄像头权限，以便实现应用具体功能，数据均保存在客户端本地；</p>
+                        <p>定位权限：使用网络进行定位，通过GPS或wifi等方式持续收集您的位置信息，所收集的信息或将用于为您和您的好友相关位置服务；</p>
+                        <p>录音权限：包含噪音检测、语音日记类型的应用会通过手机或者耳机的麦克使用录音权限，是为了功能实现需要，录制的音频均保存在本地；</p>
+                        <p>获取通讯录权限：包含文件传输功能的应用需要获取通讯录权限，获取该权限仅为实现文件传输功能需要（便捷地将一台设备的通讯录数据导入到另外一台设备），我们不会上传任何通讯录相关数据到服务器；</p>
+                        <p>获取软件列表：包含应用隐藏类型的应用会收集软件列表，仅为功能需要，不会上传任何数据；广告投放会收集您的软件列表，以便提供更优质的广告服务；</p>
                         <p><strong>小米PUSH</strong></p>
                         <p>（5）您参加营销推广活动</p>
                         <p>当您选择参加我们举办的有关营销和互动活动时，根据活动实际需要您提供姓名、通信地址、联系方式、银行账号等信息。经过您的明示同意，我们会将上述信息与第三方共享以便我们能委托第三方及时向您提供奖励。</p>
