--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -226,6 +226,15 @@
                         <p>录音权限：包含噪音检测、语音日记类型的应用会通过手机或者耳机的麦克使用录音权限，是为了功能实现需要，录制的音频均保存在本地；</p>
                         <p>获取通讯录权限：包含文件传输功能的应用需要获取通讯录权限，获取该权限仅为实现文件传输功能需要（便捷地将一台设备的通讯录数据导入到另外一台设备），我们不会上传任何通讯录相关数据到服务器；</p>
                         <p>获取软件列表：包含应用隐藏类型的应用会收集软件列表，仅为功能需要，不会上传任何数据；广告投放会收集您的软件列表，以便提供更优质的广告服务；</p>
+                        <p>适用范围a) 在您注册本应用帐号时，您根据本应用要求提供的个人注册信息；</p>
+                        <p>b) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
+                        <p>c) 本应用通过合法途径从商业伙伴处取得的用户个人数据；</p>
+                        <p>您了解并同意，以下信息不适用本隐私权政策：</p>
+                        <p>a) 您在使用本应用平台提供的搜索服务时输入的关键字信息；</p>
+                        <p>b) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；</p>
+                        <p>c) 违反法律规定或违反本应用规则行为及本应用已对您采取的措施；</p>
+                        <p>a) 本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料；</p>
+                        <p>b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议；</p>
                         <p><strong>小米PUSH</strong></p>
                         <p>（5）您参加营销推广活动</p>
                         <p>当您选择参加我们举办的有关营销和互动活动时，根据活动实际需要您提供姓名、通信地址、联系方式、银行账号等信息。经过您的明示同意，我们会将上述信息与第三方共享以便我们能委托第三方及时向您提供奖励。</p>
