--- a/bdysgc2.html
+++ b/bdysgc2.html
@@ -20,14 +20,14 @@
                 <dl>
                     <dd>
                         <p style=text-align:right>
-                            最后更新、生效和发布日期：2021年05月
+                            最后更新、生效和发布日期：2022年05月
                         </p>
                         <p><strong>导言：</strong></p>
                         <p>
-                            <strong>欢迎您使用<span class=app_name>影视工场</span>！</strong>
+                            <strong>欢迎您使用<span class=app_name>影视工场APP</span>！</strong>
                         </p>
                         <p>
-                            本软件非常重视个人信息的保护，您在使用<span class=app_name>影视工场</span>平台及相关服务（下称“本平台/本服务/本应用”）前，请您务必仔细阅读并透彻理解《<span class=app_name>影视工场</span>隐私政策》（下称“本隐私政策”），<strong>特别是以粗体/粗体下划线标识的条款，您应重点阅读，在确认充分理解并同意后再开始使用。</strong>公司可能会收集和使用您的相关信息，您一旦选择使用本平台及服务，即意味着同意公司按照本隐私政策收集、保存、使用、共享、披露及保护您的信息。<strong>除另有约定外，本政策所用术语与《用户协议》中的术语具有相同的涵义。</strong>
+                            本软件非常重视个人信息的保护，您在使用<span class=app_name>影视工场APP</span>平台及相关服务（下称“本平台/本服务/本应用”）前，请您务必仔细阅读并透彻理解《<span class=app_name>影视工场APP</span>隐私政策》（下称“本隐私政策”），<strong>特别是以粗体/粗体下划线标识的条款，您应重点阅读，在确认充分理解并同意后再开始使用。</strong>公司可能会收集和使用您的相关信息，您一旦选择使用本平台及服务，即意味着同意公司按照本隐私政策收集、保存、使用、共享、披露及保护您的信息。<strong>除另有约定外，本政策所用术语与《用户协议》中的术语具有相同的涵义。</strong>
                         </p>
                         <p>
                             如您未明示同意本隐私政策并开始使用，我们将仅收集浏览推荐所必需的信息，这将导致我们无法为您提供完整的产品和服务，但我们同样会采用去标识化、加密等措施来保护这些信息。<strong>如果您不同意本隐私政策，我们无法为您提供完整的产品和服务，您也可以选择停止使用。当您选择继续或再次使用时，基于提供产品和服务所必需，将视为您接受和认可我们按照本政策对您的相关信息进行处理。</strong>
@@ -87,38 +87,6 @@
                         <p><strong>2.注册、认证、登录本平台和相关服务</strong></p>
                         <p>（1）当您注册、登录本平台及相关服务时，您可以通过手机号创建账号，我们将通过发送短信验证码来验证您的身份是否真实有效，并且您可以完善相关的网络身份识别信息（如头像、昵称和密码），收集这些信息是为了帮助您完成注册。您还可以根据自身需求选择填写性别、地区等信息完善您的个人信息。</p>
                         <p>(2）在您使用“认证”等需进行身份认证的功能或服务时，根据中华人民共和国相关法律法规，您可能需要提供您的真实身份信息（真实姓名、身份证号码、电话号码等）以完成实名验证。这些信息属于个人敏感信息，我们将采用行业内通行的方式，尽最大的商业努力来保护您个人敏感信息的安全。如果您不提供这些信息，您将可能无法获得相关服务，但不影响本平台其他功能与服务的正常使用。</p>
-                        <p><strong>3.为您推荐个性化的信息或服务，为实现这一功能，我们可能会收集并使用下列信息：</strong></p>
-                        <p>（1）关注、收藏、搜索、浏览偏好（您感兴趣的数据等信息内容）等您的操作、使用行为信息；</p>
-                        <p>（2）反馈、发布、点赞、评论等您主动提供的信息；</p>
-                        <p>拒绝提供地理位置信息，我们将不会基于地理位置向您推送信息，但不会影响本平台其他功能与服务的正常使用。</p>
-                        <p>我们可能会将上述信息与来自我们其他服务的信息结合，进行综合统计并通过算法做特征与偏好分析，用以向您进行个性化推荐、展示或推送您可能感兴趣的特定信息，或者推送更适合您的特定功能或服务：</p>
-                        <p>（1）向您展示、推荐或推送与您有更高相关程度的信息；</p>
-                        <p> (2）推送您可能更感兴趣的账号；</p>
-                        <p>（3）推荐相关的城市、地区资讯；</p>
-                        <p>（4）推荐与您相关程度更高的程序化广告。您可以在界面中选择关闭程序化广告推荐。关闭后您仍会收到相同数量的广告，但广告相关性会降低。</p>
-                        <p>请您了解，我们收集、使用的上述信息进行了去标识化处理，数据分析仅对应特定的、无法直接关联用户身份的编码，无法也绝不会与您的真实身份相关联。</p>
-                        <p><strong>4.收集、使用信息的范围详细列表如下：</strong></p>
-                        <p>
-                            1)登录：用户登录账号、头像、昵称，或手机号登录的<strong>手机号码（*）</strong>，此时<strong>需要在应用后台获取安卓系统设备唯一标识（安卓ID）、MAC信息、IP地址</strong>，为了绑定用户个人信息；
-                        </p>
-                        <p>2)编辑资料：账号头像、昵称；</p>
-                        <p>
-                            3)账号：账号<strong>ID</strong>（系统生成的唯一标识，用户不可进行编辑）、账号头像、昵称、性别；
-                        </p>
-                        <p>
-                            4)通知：若您同意并主动点击“允许”，我们将向您发送推送通知，通知的声音、标记等形式您可以在手机系统中进行设置；如您希望关闭推送通知的，可以在手机系统中设置关闭通知。此时<strong>需要在应用后台获取安卓系统设备唯一标识（安卓ID）、MAC信息、IP地址</strong>，为了精准地推送消息给用户；
-                        </p>
-                        <p>
-                            5)用户收藏：加入收藏（用户使用同一设备加入收藏列表，用户可删除已加入的信息）、管理收藏记录（删除栏目中记录）。此时<strong>需要在应用后台获取安卓系统设备唯一标识（安卓ID）、MAC信息，为了帮助用户记录历史数据；</strong>
-                        </p>
-                        <p>
-                            6)历史记录：浏览资讯（用户使用同一设备在本软件浏览过的资讯）、收藏记录（用户使用同一账号加入书架的全部资讯，用户可删除已加入的浏览记录、将记录中的资讯加入设备本地）、管理历史（删除资讯），为了实现资讯记录功能，您需要登录本软件注册账号，如您拒绝登录的，则无法使用；
-                        </p>
-                        <p>
-                            7)账号绑定：我的—设置——账号管理页面，您可以进行<strong>手机号码绑定（*）</strong>，您可以自主更换绑定<strong>手机号码（*）</strong>，若您希望取消手机号码绑定的，请联系我们的客服；
-                        </p>
-                        <p>
-                            8)帮助与反馈：若您同意并主动点击“我要反馈”时，需提交问题描述以及用户的联系方式，<strong>手机号码（*）</strong>或<strong>QQ号码（*）</strong>或<strong>微信号（*）</strong>。
                         </p>
                         <p>我们的部分服务可能需要您提供特定的<strong>个人敏感信息（*）</strong>来实现特定功能。若您选择不提供该类信息，则可能无法正常使用服务中的特定功能，但不影响您使用服务中的其他功能。<strong>若您点击同意此协议，即表示您同意我们按照本协议所描述目的和方式来处理您的个人敏感信息。</strong>
                         </p>
@@ -154,7 +122,6 @@
                         <p>（2）允许访问<strong>WiFi</strong>状态权限；</p>
                         <p>（3）允许访问网络状态权限；</p>
                         <p>（4）允许请求访问使用拍照、相册权限，以便用户上传头像；</p>
-                        <p>（5）允许获取消息推送权限，以便接收我们最新通知。</p>
                         <p>（6）允许应用后台获取IOS系统设备的广告标识符（IDFA）、IP地址，以便绑定当前用户登录信息和精准推荐信息；</p>
                         <p><strong>5.为您提供信息发布功能或服务</strong></p>
                         <p>您发布内容、评论、提问或回答时，我们将收集您发布的信息，并展示您的昵称、头像、发布内容等。</p>
@@ -193,7 +160,7 @@
                         <p>我们可能会设置认证与保障安全性的 cookie 或匿名标识符，使我们确认您是否安全登录服务，或者是否遇到盗用、欺诈等不法行为。这些技术还会帮助我们改进服务效率，提升登录和响应速度。</p>
                         <p>（二）帮助您获得更轻松的访问体验</p>
                         <p>使用此类技术可以帮助您省去重复您填写个人信息、输入搜索内容的步骤和流程（例如：记录搜索历史）。</p>
-                        <p>（三）为您推荐、展示、推送您可能感兴趣的内容或账号</p>
+                        <p>（三）为您推荐、展示您可能感兴趣的内容或账号</p>
                         <p>我们可能会利用 Cookie 和同类技术（例如 Beacon、Proxy 等技术）了解您的偏好和使用习惯，进行咨询或数据分析，以改善产品服务及用户体验，并优化您对广告的选择。</p>
                         <p>我们承诺，我们不会将 Cookie 用于本隐私政策所述目的之外的任何其他用途。</p>
                         <br>
@@ -217,10 +184,6 @@
                         <p> 4.1）为实现相关功能或服务与我们的关联方、第三方服务提供商共享：当您在使用“热门”或其他第三方服务商提供的功能时，为保障向您提供服务的顺利完成、您在我们及关联方提供的产品间所接受服务的一致性，并方便统一管理您的信息，我们会将您去标识化后的个人信息（主要包括您的设备信息、产品使用信息、账号信息）与这些关联方或第三方服务提供商共享。</p>
                         <p> 4.2）为了使您能够享受下表所列的服务及功能，我们会在应用中嵌入我们合作伙伴的第三方软件工具开发包（SDK）、代码插件或其他类似的应用程序。具体见下表。我们会对合作伙伴获取有关信息的应用程序接口（API）、软件工具开发包（SDK）进行安全检测，并与授权合作伙伴约定严格的数据保护措施，令其按照我们的委托目的、服务说明、本隐私政策以及其他任何相关的保密和安全措施来处理个人信息。</p>
                         <p><strong>安卓版本涉及嵌入第三方代码、SDK传入个人信息的情形列举如下：</strong></p>
-                        <p><strong>极光推送SDK</strong></p>
-                        <p>使用目的：帮助提升推送消息触达和保障系统运行稳定</p>
-                        <p>数据类型：设备唯一标识码、SD卡容量、APP包名和版本及所属进程名、Crash信息及线程堆栈、设备MAC地址、后台获取MAC信息</p>
-                        <p>官网链接：https://docs.jiguang.cn/</p>
                         <p><strong>穿山甲广告SDK</strong></p>
                         <p>使用目的：广告投放</p>
                         <p>数据类型：硬件型号、操作系统版本号、国际移动设备识别码（IMEI）、网络设备硬件地址（MAC）、后台获取MAC信息、IP 地址、软件版本号、设备位置信息、网络接入方式及类型、操作日志等信息</p>
@@ -250,25 +213,6 @@
                         <p>数据类型：设备标识信息、电话号码</p>
                         <p>官网链接：https://www.aliyun.com/</p>
                         <p><strong>小米PUSH</strong></p>
-                        <p>使用目的：推送消息</p>
-                        <p>数据类型：设备信息，包括操作系统版本、设备机型</p>
-                        <p style=word-wrap:break-word>官网链接：https://dev.mi.com/console/appservice/push.html</p>
-                        <p><strong>VIVO PUSH</strong></p>
-                        <p>使用目的：推送消息</p>
-                        <p>数据类型：设备信息，包括操作系统版本、设备机型</p>
-                        <p style=word-wrap:break-word>官网链接：https://dev.vivo.com.cn/documentCenter/doc/365</p>
-                        <p><strong>OPPO PUSH</strong></p>
-                        <p>使用目的：推送消息</p>
-                        <p>数据类型：设备信息，包括操作系统版本、设备机型</p>
-                        <p style=word-wrap:break-word>官网链接：https://open.oppomobile.com/wiki/doc#id=10196</p>
-                        <p><strong>魅族PUSH</strong></p>
-                        <p>使用目的：推送消息</p>
-                        <p>数据类型：设备信息，包括操作系统版本、设备机型</p>
-                        <p style=word-wrap:break-word>官网链接：https://open.flyme.cn/open-web/views/push.html</p>
-                        <p><strong>华为PUSH</strong></p>
-                        <p>使用目的：推送消息</p>
-                        <p>数据类型：设备信息，包括操作系统版本、设备机型</p>
-                        <p style=word-wrap:break-word>官网链接：https://developer.huawei.com/consumer/cn/hms/huawei-pushkit</p>
                         <p>（5）您参加营销推广活动</p>
                         <p>当您选择参加我们举办的有关营销和互动活动时，根据活动实际需要您提供姓名、通信地址、联系方式、银行账号等信息。经过您的明示同意，我们会将上述信息与第三方共享以便我们能委托第三方及时向您提供奖励。</p>
                         <p>2.对共享个人信息第三方主体的谨慎评估及责任约束</p>
@@ -326,29 +270,11 @@
                         <p>我们非常重视您对个人信息的管理，并尽全力保护您对于您个人信息的查询、访问、修改、删除、撤回同意授权、注销账号、投诉举报以及设置隐私功能等权利，以使您有能力保障您的隐私和安全。</p>
                         <p>（一）访问、删除、更正您的个人信息</p>
                         <p>您可以通过以下方式管理您的信息：</p>
-                        <p>1. 访问个人账号信息：</p>
-                        <p>您可以查询、访问您的头像、用户名、简介、性别、生日、地区、位置、邮箱等基本信息（身份证个人信息除外），您可以在本平台的“编辑资料”或“账号和隐私设置”中进行查询、访问。</p>
-                        <p>2. 查询访问、更正、取消您的账号、查询阅读信息：</p>
-                        <p>（1）进入 本平台—点击个人中心—点击“我的设置”可以退出已登录的账号，点击“头像”可以修改用户昵称和头像。</p>
-                        <p>（2）进入本平台—点击个人中心—点击“关注”（可以访问关注账号）。</p>
-                        <p>3. 查询访问、更改、删除您的收藏记录、历史记录、搜索历史记录</p>
-                        <p>（1）点击“个人中心”—点击“浏览历史”的进入查询访问、删除；</p>
-                        <p>（2）点击搜索栏—删除搜索“历史记录”；</p>
-                        <p>（3）您可以通过点击“系统设置”—点击“清理缓存”。</p>
-                        <p>4.删除发布内容、提问及回答内容、评论内容</p>
-                        <p>（1）发布内容：进入 本平台点击评论进入“评论”或通过本平台进入单条内容—点击单条内容右上角“…”符号操作删除；</p>
-                        <p>（2）评论内容：您可通过访问单条评论内容、并通过访问页面删除您的评论。</p>
                         <p>特别提示您注意，出于安全性和身份识别（如号码申诉服务）的考虑，您可能无法自主修改注册时提交的某些初始注册信息。如您确有需要修改该类注册信息，请根据本隐私政策载明的联系方式联系我们予以修改或删除。</p>
-                        <p>（二）自主选择控制个性化推荐信息</p>
-                        <p>我们的相关信息推荐等功能可能会根据信息系统、算法等在内的非人工自动决策机制做出，当您对我们推送的信息不感兴趣或希望减少某些信息推荐时，您可以点击推送信息栏中的“X”，并选择相关理由，进行精准屏蔽。这会有助您对推送信息的控制与自主决策。</p>
-                        <p>您也可以通过登录本平台客户端中的“个人中心”—“我的”—“联系我们”或通过“用户反馈”入口与我们联系，您的反馈我们将会及时处理回复。</p>
-                        <p>（三）改变您授权同意范围或撤销授权</p>
+                         <p>（二）改变您授权同意范围或撤销授权</p>
                         <p>1.改变或撤回敏感信息权限</p>
                         <p>您可以通过的本平台中删除信息、更改隐私设置以及在设备本身操作系统中关闭地理位置、存储、摄像头等权限改变同意范围或撤回您的授权。</p>
-                        <p>2.拒绝接受推送及营销信息</p>
-                        <p>您可以通过设置关闭“推送通知“拒绝消息的推送，通过“设置”打开或关闭程序化广告展示设置，通过回复“TD”等退订我们发送您的营销短信。</p>
-                        <p>请您理解，特定的业务功能和服务将需要您的信息才能得以完成，当您撤回同意或授权后，我们无法继续为您提供撤回同意或授权所对应的功能和服务，也不再处理您相应的个人信息。但您撤回同意或授权的决定，不会影响公司此前基于您的授权而开展的个人信息处理。</p>
-                        <p>（四）投诉举报</p>
+                         <p>（三）投诉举报</p>
                         <p>您可按照我们公示的制度进行投诉或举报。如果您认为您的个人信息权利可能受到侵害，或者发现侵害个人信息权利的线索（例如：认为我们收集您的个人信息违反法律规定或者双方约定），您可以通过点击“反馈”，进入用户反馈界面与我们联系。我们核查后会及时反馈您的投诉与举报。</p>
                         <p>（五）访问隐私政策</p>
                         <p>您可以在注册页面，或者在个人中心-“我的”—“设置”—“关于我们”查看本隐私政策的全部内容或通过网页端首页“更多”查看本隐私政策全部内容。</p>
@@ -394,7 +320,7 @@
                             <strong>我国《合同法》第39条规定：采用格式条款订立合同的，提供格式条款的一方应当遵循公平原则确定当事人之间的权利和义务，并采取合理的方式提请对方注意免除或者限制其责任的条款，按照对方的要求，对该条款予以说明。</strong>
                         </p>
                         <p><strong>联系我们</strong></p>
-                        <div class=cont_p><p class=email_p>邮箱：a17776886165@126.com<p class=email_p>主体：洛阳百为智能科技有限公司<p class=email_p>联系人：李先生<p class=email_p>手机：1777686165<p class=email_p>地址：河南省洛阳市洛龙区孝文大道安装大厦1906号</p></div>
+                        <div class=cont_p><p class=email_p>邮箱：15776888165@126.com<p class=email_p>联系人：张先生<p class=email_p>主体：洛阳百为智能科技有限公司<p class=email_p>手机：15776888165<p class=email_p>地址：河南省洛阳市滨江区蓝天路77号</p></div>
                 </dl>
             </section>
         </section>
