--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html> <html lang=en style><!--
  Page saved with SingleFile 
  url: http://wenchenzhihui.tech/a/privacy/2fcb6bbc60faa1c8796bbe92aca2c816 
- saved date: Tue May 16 2023 18:18:50 GMT+0800 (中国标准时间)
+ saved date: Tue May 16 2023 20:06:46 GMT+0800 (中国标准时间)
 --><meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <meta http-equiv=X-UA-Compatible content="ie=edge">
-<title>星空视频隐私政策</title>
+<title>乐看视频隐私政策</title>
 <style>p{margin:4px 0}h4{margin:8px 0 6px}</style>
 <link rel=canonical href=http://wenchenzhihui.tech/a/privacy/2fcb6bbc60faa1c8796bbe92aca2c816><meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;"><style>img[src="data:,"],source[src="data:,"]{display:none!important}</style></head>
  <body>
- <div style="max-width:700px;margin:0 auto"><h1>星空视频隐私政策</h1>
-<p><strong>隐私政策版本日期：2022年08月10日.</strong></p>
-<p><strong>隐私政策生效日期：2022年08月10日.</strong></p>
-<h4>杭州泽唯供应链管理有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
+ <div style="max-width:700px;margin:0 auto"><h1>乐看视频隐私政策</h1>
+<p><strong>隐私政策版本日期：2022年05月01日.</strong></p>
+<p><strong>隐私政策生效日期：2022年05月01日.</strong></p>
+<h4>长沙文宸智慧网络科技有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
 <h4>本隐私政策将帮助您了解以下内容：</h4>
 <h4>1. 我们收集的信息及使用的SDK</h4>
 <h4>2. 权限申请及应用场景、范围</h4>
@@ -23,6 +23,13 @@
 <h4>7. 隐私政策的查阅和修订</h4>
 <h4>8. 联系我们</h4>
 <h4>1. 我们收集的信息及使用的SDK</h4>
+<p>合作方式</p>
+<p>个人信息类型与字段</p>
+<p>用途和目的</p>
+<p>GromoreSDK</p>
+<p>使用Gromore服务调整广告变现策略</p>
+<p>设备信息： 设备品牌、型号、操作系统版本信息、设备标识符（如IMEI、AndroidID、OAID、IMSI、ICCID、GAID、MEID、IDFV、IDFA，具体字段因软硬件版本不同而存在差异）等基础信息应用信息：开发者应用名、应用包名、版本号等信息其他信息：运营商信息、设备时区、设备地理位置、网络设备硬件地址（MAC地址）、IP 地址、WLAN接入点（如SSID，BSSID）、蓝牙（Bluetooth）、基站、软件版本号、网络接入方式、类型、状态、网络质量数据、操作、使用、服务日志。</p>
+<p>向您提供帮助调整广告变现策略的服务</p>
 <p>为保障本应用相关功能的实现与应用安全稳定的运行，我们可能会接入由第三方提供的软件开发包（SDK）实现相关目的。 我们会对合作方获取信息的软件工具开发包（SDK）进行严格的安全监测，以保护数据安全。 我们对接入的相关第三方SDK在目录中列明。 请注意，第三方SDK可能因为其版本升级、策略调整等原因导致数据处理类型存在一定变化，请以其公示的官方说明为准；</p>
 <p>Umeng（友盟） SDK com.umeng.analytics</p>
 <p>使用目的：统计分析、提供信息</p>
@@ -56,6 +63,10 @@
 <p><strong>获取通讯录权限：包含文件传输功能的应用需要获取通讯录权限，获取该权限仅为实现文件传输功能需要（便捷地将一台设备的通讯录数据导入到另外一台设备），我们不会上传任何通讯录相关数据到服务器；</strong></p>
 <p><strong>获取软件列表：包含应用隐藏类型的应用会收集软件列表，仅为功能需要，不会上传任何数据；广告投放会收集您的软件列表，以便提供更优质的广告服务；</strong></p>
 <h4>3. 个人信息适用范围</h4>
+<p>信息名称：设备标识符AndroidId</p>
+<p>使用目的：判断设备是否激活、运行环境是否安全</p>
+<p>全使用场景：App启动时</p>
+<p>收集情况：App运行时收集一次</p>
 <p>a) 在您注册本应用帐号时，您根据本应用要求提供的个人注册信息；</p>
 <p>b) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
 <p>c) 本应用通过合法途径从商业伙伴处取得的用户个人数据；</p>
@@ -90,7 +101,7 @@
 <p>在该种情况下，若您继续使用我们的服务，即表示同意受经修订的本《隐私政策》的约束；</p>
 <h4>8. 联系我们</h4>
 <p>如果你对个人信息保护问题有疑问或建议，可选择通过以下方式联系我们：</p>
-<p>（a) 发送邮件至：xingkong1999@126.com</p>
+<p>（a) 发送邮件至：wenchen2021@126.com</p>
 <p>我们将尽快审核你提出的问题或建议，并在验证你的用户身份后的三十个工作日内回复。</p>
 </div>
  
