--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -5,14 +5,14 @@
 --><meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <meta http-equiv=X-UA-Compatible content="ie=edge">
-<title>乐看视频隐私政策</title>
+<title>星空视频隐私政策</title>
 <style>p{margin:4px 0}h4{margin:8px 0 6px}</style>
 <link rel=canonical href=http://wenchenzhihui.tech/a/privacy/2fcb6bbc60faa1c8796bbe92aca2c816><meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;"><style>img[src="data:,"],source[src="data:,"]{display:none!important}</style></head>
  <body>
- <div style="max-width:700px;margin:0 auto"><h1>乐看视频隐私政策</h1>
-<p><strong>隐私政策版本日期：2022年05月01日.</strong></p>
-<p><strong>隐私政策生效日期：2022年05月01日.</strong></p>
-<h4>长沙文宸智慧网络科技有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
+ <div style="max-width:700px;margin:0 auto"><h1>星空视频隐私政策</h1>
+<p><strong>隐私政策版本日期：2022年08月01日.</strong></p>
+<p><strong>隐私政策生效日期：2022年08月01日.</strong></p>
+<h4>杭州泽唯供应链管理有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
 <h4>本隐私政策将帮助您了解以下内容：</h4>
 <h4>1. 我们收集的信息及使用的SDK</h4>
 <h4>2. 权限申请及应用场景、范围</h4>
@@ -28,12 +28,12 @@
 <p>用途和目的</p>
 <p>GromoreSDK</p>
 <p>使用Gromore服务调整广告变现策略</p>
-<p>设备信息： 设备品牌、型号、操作系统版本信息、设备标识符（如IMEI、AndroidID、OAID、IMSI、ICCID、GAID、MEID、IDFV、IDFA，具体字段因软硬件版本不同而存在差异）等基础信息应用信息：开发者应用名、应用包名、版本号等信息其他信息：运营商信息、设备时区、设备地理位置、网络设备硬件地址（MAC地址）、IP 地址、WLAN接入点（如SSID，BSSID）、蓝牙（Bluetooth）、基站、软件版本号、网络接入方式、类型、状态、网络质量数据、操作、使用、服务日志。</p>
+<p>设备信息： 设备品牌、型号、操作系统版本信息、设备标识符（如IMEI、OAID、IMSI、ICCID、GAID、MEID、IDFV、IDFA，具体字段因软硬件版本不同而存在差异）等基础信息应用信息：开发者应用名、应用包名、版本号等信息其他信息：运营商信息、设备时区、设备地理位置、网络设备硬件地址（MAC地址）、IP 地址、WLAN接入点（如SSID，BSSID）、蓝牙（Bluetooth）、基站、软件版本号、网络接入方式、类型、状态、网络质量数据、操作、使用、服务日志。</p>
 <p>向您提供帮助调整广告变现策略的服务</p>
 <p>为保障本应用相关功能的实现与应用安全稳定的运行，我们可能会接入由第三方提供的软件开发包（SDK）实现相关目的。 我们会对合作方获取信息的软件工具开发包（SDK）进行严格的安全监测，以保护数据安全。 我们对接入的相关第三方SDK在目录中列明。 请注意，第三方SDK可能因为其版本升级、策略调整等原因导致数据处理类型存在一定变化，请以其公示的官方说明为准；</p>
 <p>Umeng（友盟） SDK com.umeng.analytics</p>
 <p>使用目的：统计分析、提供信息</p>
-<p><strong>数据类型：我们的产品应用运行期间在经用户同意之后在后台状态下需要收集用户个人信息。我们收集、使用的个人信息包括但不限于以下类型：包括但不限于手机号/设备ID(DEVICE_ID)/IMEI/Mac/androidID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息或其他永久性或非永久性设备标识符（“设备标识符”）；设备平台和固件；手机运营商；邮政编码、地域码、粗略定位等地理数据</strong></p>
+<p><strong>数据类型：我们的产品应用运行期间在经用户同意之后在后台状态下需要收集用户个人信息。我们收集、使用的个人信息包括但不限于以下类型：包括但不限于手机号/设备ID(DEVICE_ID)/IMEI/Mac/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息或其他永久性或非永久性设备标识符（“设备标识符”）；设备平台和固件；手机运营商；邮政编码、地域码、粗略定位等地理数据</strong></p>
 <p>官网链接：<a href=https://www.umeng.com/policy>https://www.umeng.com/policy</a></p>
 <p>穿山甲SDK com.bytedance.sdk.openadsdk</p>
 <p>使用目的：广告投放</p>
