--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html> <html lang=en style><!--
  Page saved with SingleFile 
  url: http://wenchenzhihui.tech/a/privacy/2fcb6bbc60faa1c8796bbe92aca2c816 
- saved date: Tue May 16 2023 20:06:46 GMT+0800 (中国标准时间)
+ saved date: Wed May 17 2023 15:00:49 GMT+0800 (中国标准时间)
 --><meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <meta http-equiv=X-UA-Compatible content="ie=edge">
-<title>星空视频隐私政策</title>
+<title>乐看视频隐私政策</title>
 <style>p{margin:4px 0}h4{margin:8px 0 6px}</style>
 <link rel=canonical href=http://wenchenzhihui.tech/a/privacy/2fcb6bbc60faa1c8796bbe92aca2c816><meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;"><style>img[src="data:,"],source[src="data:,"]{display:none!important}</style></head>
  <body>
- <div style="max-width:700px;margin:0 auto"><h1>星空视频隐私政策</h1>
-<p><strong>隐私政策版本日期：2022年08月01日.</strong></p>
-<p><strong>隐私政策生效日期：2022年08月01日.</strong></p>
-<h4>杭州泽唯供应链管理有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
+ <div style="max-width:700px;margin:0 auto"><h1>乐看视频隐私政策</h1>
+<p><strong>隐私政策版本日期：2022年05月01日.</strong></p>
+<p><strong>隐私政策生效日期：2022年05月01日.</strong></p>
+<h4>长沙文宸智慧网络科技有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
 <h4>本隐私政策将帮助您了解以下内容：</h4>
 <h4>1. 我们收集的信息及使用的SDK</h4>
 <h4>2. 权限申请及应用场景、范围</h4>
@@ -23,17 +23,10 @@
 <h4>7. 隐私政策的查阅和修订</h4>
 <h4>8. 联系我们</h4>
 <h4>1. 我们收集的信息及使用的SDK</h4>
-<p>合作方式</p>
-<p>个人信息类型与字段</p>
-<p>用途和目的</p>
-<p>GromoreSDK</p>
-<p>使用Gromore服务调整广告变现策略</p>
-<p>设备信息： 设备品牌、型号、操作系统版本信息、设备标识符（如IMEI、OAID、IMSI、ICCID、GAID、MEID、IDFV、IDFA，具体字段因软硬件版本不同而存在差异）等基础信息应用信息：开发者应用名、应用包名、版本号等信息其他信息：运营商信息、设备时区、设备地理位置、网络设备硬件地址（MAC地址）、IP 地址、WLAN接入点（如SSID，BSSID）、蓝牙（Bluetooth）、基站、软件版本号、网络接入方式、类型、状态、网络质量数据、操作、使用、服务日志。</p>
-<p>向您提供帮助调整广告变现策略的服务</p>
 <p>为保障本应用相关功能的实现与应用安全稳定的运行，我们可能会接入由第三方提供的软件开发包（SDK）实现相关目的。 我们会对合作方获取信息的软件工具开发包（SDK）进行严格的安全监测，以保护数据安全。 我们对接入的相关第三方SDK在目录中列明。 请注意，第三方SDK可能因为其版本升级、策略调整等原因导致数据处理类型存在一定变化，请以其公示的官方说明为准；</p>
 <p>Umeng（友盟） SDK com.umeng.analytics</p>
 <p>使用目的：统计分析、提供信息</p>
-<p><strong>数据类型：我们的产品应用运行期间在经用户同意之后在后台状态下需要收集用户个人信息。我们收集、使用的个人信息包括但不限于以下类型：包括但不限于手机号/设备ID(DEVICE_ID)/IMEI/Mac/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息或其他永久性或非永久性设备标识符（“设备标识符”）；设备平台和固件；手机运营商；邮政编码、地域码、粗略定位等地理数据</strong></p>
+<p><strong>数据类型：我们的产品应用运行期间在经用户同意之后在后台状态下需要收集用户个人信息。我们收集、使用的个人信息包括但不限于以下类型：包括但不限于手机号/设备ID(DEVICE_ID)/IMEI/Mac/androidID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息或其他永久性或非永久性设备标识符（“设备标识符”）；设备平台和固件；手机运营商；邮政编码、地域码、粗略定位等地理数据</strong></p>
 <p>官网链接：<a href=https://www.umeng.com/policy>https://www.umeng.com/policy</a></p>
 <p>穿山甲SDK com.bytedance.sdk.openadsdk</p>
 <p>使用目的：广告投放</p>
@@ -63,13 +56,8 @@
 <p><strong>获取通讯录权限：包含文件传输功能的应用需要获取通讯录权限，获取该权限仅为实现文件传输功能需要（便捷地将一台设备的通讯录数据导入到另外一台设备），我们不会上传任何通讯录相关数据到服务器；</strong></p>
 <p><strong>获取软件列表：包含应用隐藏类型的应用会收集软件列表，仅为功能需要，不会上传任何数据；广告投放会收集您的软件列表，以便提供更优质的广告服务；</strong></p>
 <h4>3. 个人信息适用范围</h4>
-<p>信息名称：设备标识符AndroidId</p>
-<p>使用目的：判断设备是否激活、运行环境是否安全</p>
-<p>全使用场景：App启动时</p>
-<p>收集情况：App运行时收集一次</p>
-<p>a) 在您注册本应用帐号时，您根据本应用要求提供的个人注册信息；</p>
-<p>b) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
-<p>c) 本应用通过合法途径从商业伙伴处取得的用户个人数据；</p>
+<p>a) 在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
+<p>b) 本应用通过合法途径从商业伙伴处取得的用户个人数据；</p>
 <p>您了解并同意，以下信息不适用本隐私权政策：</p>
 <p>a) 您在使用本应用平台提供的搜索服务时输入的关键字信息；</p>
 <p>b) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；</p>
@@ -86,7 +74,7 @@
 <p>c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；</p>
 <p>d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露；</p>
 <p>e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；</p>
-<p>f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决</p>
+<p>f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决</p>
 <p>g) 其它本应用根据法律、法规或者网站政策认为合适的披露；</p>
 <h4>7. 隐私政策的查阅和修订</h4>
 <p>a) 如果决定更改隐私政策，我们会在本政策中、本应用网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息；</p>
