--- a/bdxmxk.html
+++ b/bdxmxk.html
@@ -5,14 +5,14 @@
 --><meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 <meta http-equiv=X-UA-Compatible content="ie=edge">
-<title>乐看视频隐私政策</title>
+<title>星空视频隐私政策</title>
 <style>p{margin:4px 0}h4{margin:8px 0 6px}</style>
 <link rel=canonical href=http://wenchenzhihui.tech/a/privacy/2fcb6bbc60faa1c8796bbe92aca2c816><meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;"><style>img[src="data:,"],source[src="data:,"]{display:none!important}</style></head>
  <body>
- <div style="max-width:700px;margin:0 auto"><h1>乐看视频隐私政策</h1>
-<p><strong>隐私政策版本日期：2022年05月01日.</strong></p>
-<p><strong>隐私政策生效日期：2022年05月01日.</strong></p>
-<h4>长沙文宸智慧网络科技有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
+ <div style="max-width:700px;margin:0 auto"><h1>星空视频隐私政策</h1>
+<p><strong>隐私政策版本日期：2022年08月05日.</strong></p>
+<p><strong>隐私政策生效日期：2022年08月05日.</strong></p>
+<h4>杭州泽唯供应链管理有限公司 （以下简称“我们”或“本应用”）作为名下所有移动互联网应用程序（以下简称“应用”）的开发者和运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更好的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 特别声明：本隐私政策适用于名下所有的应用。</h4>
 <h4>本隐私政策将帮助您了解以下内容：</h4>
 <h4>1. 我们收集的信息及使用的SDK</h4>
 <h4>2. 权限申请及应用场景、范围</h4>
