--- a/bdkgys.html
+++ b/bdkgys.html
@@ -24,10 +24,10 @@
                         </p>
                         <p><strong>导言：</strong></p>
                         <p>
-                            <strong>欢迎您使用<span class=app_name>快狗影视</span>！</strong>
+                            <strong>欢迎您使用<span class=app_name>影视大全</span>！</strong>
                         </p>
                         <p>
-                            本软件非常重视个人信息的保护，您在使用<span class=app_name>快狗影视</span>平台及相关服务（下称“本平台/本服务/本应用”）前，请您务必仔细阅读并透彻理解《<span class=app_name>快狗影视</span>隐私政策》（下称“本隐私政策”），<strong>特别是以粗体/粗体下划线标识的条款，您应重点阅读，在确认充分理解并同意后再开始使用。</strong>公司可能会收集和使用您的相关信息，您一旦选择使用本平台及服务，即意味着同意公司按照本隐私政策收集、保存、使用、共享、披露及保护您的信息。<strong>除另有约定外，本政策所用术语与《用户协议》中的术语具有相同的涵义。</strong>
+                            本软件非常重视个人信息的保护，您在使用<span class=app_name>影视大全</span>平台及相关服务（下称“本平台/本服务/本应用”）前，请您务必仔细阅读并透彻理解《<span class=app_name>影视大全</span>隐私政策》（下称“本隐私政策”），<strong>特别是以粗体/粗体下划线标识的条款，您应重点阅读，在确认充分理解并同意后再开始使用。</strong>公司可能会收集和使用您的相关信息，您一旦选择使用本平台及服务，即意味着同意公司按照本隐私政策收集、保存、使用、共享、披露及保护您的信息。<strong>除另有约定外，本政策所用术语与《用户协议》中的术语具有相同的涵义。</strong>
                         </p>
                         <p>
                             如您未明示同意本隐私政策并开始使用，我们将仅收集浏览推荐所必需的信息，这将导致我们无法为您提供完整的产品和服务，但我们同样会采用去标识化、加密等措施来保护这些信息。<strong>如果您不同意本隐私政策，我们无法为您提供完整的产品和服务，您也可以选择停止使用。当您选择继续或再次使用时，基于提供产品和服务所必需，将视为您接受和认可我们按照本政策对您的相关信息进行处理。</strong>
