--- a/bdjkkys.html
+++ b/bdjkkys.html
@@ -394,7 +394,7 @@
                             <strong>我国《合同法》第39条规定：采用格式条款订立合同的，提供格式条款的一方应当遵循公平原则确定当事人之间的权利和义务，并采取合理的方式提请对方注意免除或者限制其责任的条款，按照对方的要求，对该条款予以说明。</strong>
                         </p>
                         <p><strong>联系我们</strong></p>
-                        <div class=cont_p><p class=email_p>邮箱：17779937667@163.com<p class=email_p>主体：杭州睿贝科技有限公司<p class=email_p>联系人：张先生<p class=email_p>手机：17779937667<p class=email_p>地址：湖南省湘潭县易俗河镇凤凰中路凯旋国际广场13楼1311室</p></div>
+                        <div class=cont_p><p class=email_p>邮箱：17779937667@163.com<p class=email_p>主体：杭州睿贝科技有限公司<p class=email_p>联系人：张先生<p class=email_p>手机：17779937667<p class=email_p>地址：浙江省杭州市萧山区凤凰中路凯旋国际广场13楼1311室</p></div>
                 </dl>
             </section>
         </section>
