--- a/bdtmys.html
+++ b/bdtmys.html
@@ -22,7 +22,7 @@
  </p>
  <p>
  <span>张云路</span>
- （以下简称“我们”或“本应用”）作为本人所有移动互联网应用程序（以下简称“应用”）的运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更为实用的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。
+ （以下简称“本人”或“本应用”）作为本人所有移动互联网应用程序（以下简称“应用”）的运营者，尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更为实用的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。 您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。
  特别声明：本隐私政策适用于本人旗下所有的应用。
  </p>
  </section>
