--- a/bdmsh.html
+++ b/bdmsh.html
@@ -17,7 +17,7 @@
  </section>
  <section style=line-height:30px;margin-bottom:20px;text-INDENT:2em>
  <p style=font-weight:bold>
- <span>闪购</span>隐私政策
+ <span>米生活</span>隐私政策
  <br>
  </p>
  <p>
